# img2vid

./: README.md  pyproject.toml
src/img2vid/: cli.py
src/img2vid/utils/: bounce.py
