[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "img2vid"
version = "0.1.0"
description = "Stitch images into a video in alphabetical order using ffmpeg (no glob needed). Defaults to 16fps and high quality."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Multimedia :: Video",
  "Topic :: Utilities"
]

[project.scripts]
img2vid = "img2vid.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
